--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fastify/swagger-ui": "^3.0.0",
     "aws-sdk": "^2.1580.0",
     "fastify": "^4.26.2",
+    "jackd": "^2.2.2",
     "node-fetch": "^3.3.2",
     "puppeteer": "^22.4.1",
     "strftime": "^0.10.2"
